<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:elevation="8dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/media_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:id="@+id/media_image"
                    android:padding="8dp"
                    android:scaleType="centerCrop"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tweet_text"
                android:layout_margin="4dp"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:text="test tweet text "/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="4dp"
                android:background="@color/colorPrimaryDark"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <com.acdemo.hashsearch.views.CircleImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/user_image"
                    android:src="@drawable/user_placeholder"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/user_image"
                    android:layout_alignBottom="@id/user_image"
                    android:layout_toRightOf="@id/user_image"
                    android:layout_toLeftOf="@+id/verified_user"
                    android:gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:id="@+id/user_name"
                    android:text="Test Username"
                    android:textSize="24dp"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/star_user"
                    android:id="@+id/verified_user"
                    android:visibility="visible"
                    android:layout_alignParentRight="true"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/user_name"
                    android:layout_below="@id/user_name"
                    android:layout_marginTop="4dp"
                    android:paddingLeft="16dp"
                    android:id="@+id/user_handle"
                    android:text="\@screenname"
                    android:textSize="16dp"
                    />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                android:padding="4dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/followers"
                            android:gravity="center_horizontal"
                            android:textSize="14dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/follower_count"
                            android:gravity="center_horizontal"
                            android:layout_marginTop="8dp"
                            android:text="44444"
                            android:textStyle="bold"
                            android:textSize="24dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tweets"
                        android:gravity="center_horizontal"
                        android:textSize="14dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tweet_count"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:text="44444"
                        android:textStyle="bold"
                        android:textSize="24dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/friends"
                        android:gravity="center_horizontal"
                        android:textSize="14dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/friends_count"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:text="44444"
                        android:textStyle="bold"
                        android:textSize="24dp"/>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time_stamp"
                android:layout_marginTop="8dp"
                android:layout_gravity="right"
                android:textSize="12sp"
                android:textStyle="italic"
                android:text="Jan, 01, 2001"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>